# santas_little_helper

./: .gitignore  .pre-commit-config.yaml  1.html  1.py  2.html  3.html  pyproject.toml
src/agents/flights/: smart_flight_advisor.py
src/models/: google.py  interface.py  model.py  providers.py
src/tools/: flight.py  flight_legacy.py  holiday.py
src/tools/flight/: flight_advanced.py  flight_serp.py
src/tools/flight/tests/: test_hopegoo.py
src/utils/: settings.py
