[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "agno",
    "google-genai",
    "sqlalchemy",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
]

flight = [
    "fast-flights==3.0rc0",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

