[project]
name = "santas_little_helper"
version = "0.1.0"
description = "The Santa's Little Helper, makes every little helps."
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "agno",
    "google-genai",
    "sqlalchemy",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
]

flight = [
    "holidays",
    "fast-flights==3.0rc0",
]

all = [
    "santas_little_helper[dev,flight]",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

